style.css
body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  padding: 5rem 3rem;

  font-family: sans-serif;
  background-color: rgb(7, 7, 7);
}

* {
  box-sizing: border-box;
  margin: 0rem;
  padding: 0rem;
  cursor: default;
}

button {
  padding: 1rem;
  cursor: pointer;
  border-radius: 1rem;
  border: none;
  color: inherit;
}

.calcu {
  flex: 1;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: stretch;
  gap: 16px;
  max-height: 43rem;
  max-width: 31rem;
  padding: 2rem;

  font-size: 3rem;

  background-color: rgb(45, 45, 45);
  border-radius: 1rem;
}

.calcu-display {
  flex: 1;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: stretch;
  max-height: 14rem;
  min-height: 9rem;
  padding: 1rem;

  color: rgb(85, 227, 85);

  background-color: rgb(31, 80, 30);
  border-radius: 1rem;
}

.calcu-expr {
  display: flex;
  align-items: center;
}

.calcu-result {
  align-self: end;

  display: flex;
  align-items: center;
}

.calcu-btns {
  display: flex;
  flex-flow: row;
  justify-content: space-between;
  gap: 16px;
}

.calcu-btns button {
  flex: 1;
  font-size: 3rem;
}

.calcu-btns button:hover {
  filter: brightness(120%);
}

.calcu-btns button:active {
  filter: brightness(80%);
}

.calcu-btns div {
  align-items: center;
  gap: 8px;
}

.calcu-input {
  display: flex;
  flex-flow: row wrap;
  max-width: 16rem;
  min-width: 13rem;
}

.calcu-input button {
  color: rgb(237, 237, 237);
  background-color: rgb(112, 112, 112);
  max-width: 5rem;
}

.calcu-operations {
  display: flex;
  flex-flow: row wrap;
  align-content: start;
  max-width: 10rem;
  min-width: 8rem;
}

.calcu-operations button {
  color: rgb(237, 237, 237);
  background-color: rgb(16, 16, 16);
}

.calcu-operations .calcu-equal{
  background-color: rgb(184, 83, 16);
}

